# Linux-toolbox

./: LICENSE  README.md  install.sh  pyproject.toml
data/: de.fojadrachi.LinuxToolbox.desktop
linux_toolbox/: __init__.py  __main__.py  main.py  pkgmanager.py  sysinfo.py
