[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-toolbox"
version = "1.0.0"
description = "Native GTK4/libadwaita-App, die Systeminfos und Wartungsaufgaben für Fedora, Debian/Ubuntu, Arch und openSUSE-basierte Systeme bündelt."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "bgol" }]

[project.scripts]
linux-toolbox = "linux_toolbox.main:main"

[tool.setuptools]
packages = ["linux_toolbox"]
